Fixed overflow

--- a/style.css
+++ b/style.css
@@ -1,11 +1,22 @@
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
-  margin: 2.5%;
-  position: absolute;
-  width: 95%;
-  height: 95%;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+
+.container {
+  box-sizing: border-box;
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-template: auto / repeat(9, 1fr);
-  grid-gap: 1.5% 1.5%;
+  grid-gap: 1rem;
 }
 
 .hexagon {
